[package]
name = "mhwho"
version = "0.1.0"
authors = ["Marcus Heese <mheese@e-xact.com>"]

[dependencies]
time = { version = "0.1", git = "https://github.com/mheese/time.git", default-features = false }
libc = { version = "0.2", default-features = false }
chrono = { version = "0.2", git = "https://github.com/mheese/rust-chrono.git", default-features = false }
rustc-serialize = { version = "0.3", default-features = false }
docopt = { version = "0.6", default-features = false }
csv = { version = "0.14", default-features = false }
xml_writer = { version = "0.1", default-features = false }
