# Copyright (C) 2016 Marcus Heese
#
# This file is part of mhwho.
#
# mhwho is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# mhwho is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with mhwho.  If not, see <http://www.gnu.org/licenses/>.

[package]
name = "mhwho"
version = "0.1.0"
authors = ["Marcus Heese <mheese@e-xact.com>"]

[dependencies]
time = { version = "0.1", git = "https://github.com/mheese/time.git", default-features = false }
libc = { version = "0.2", default-features = false }
chrono = { version = "0.2", git = "https://github.com/mheese/rust-chrono.git", default-features = false }
rustc-serialize = { version = "0.3", default-features = false }
docopt = { version = "0.6", default-features = false }
csv = { version = "0.14", default-features = false }
xml_writer = { version = "0.1", default-features = false }
